[package]
name = "zpr"
version = "0.19.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
base64 = { version = "0.22.1", optional = true }
bytes = { version = "1.10.1", optional = true }
capnp = { version = "0.25", optional = true }
colored = { version = "3.0.0", optional = true}
criterion = { version = "0.8.2 "}
flate2 = { version = "1.0.34", optional = true}
open-enum = { version = "0.5" }
serde = { version = "1.0.228", features = ["derive"], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
thiserror = "1.0.65"
url = "2.5.4"
range-set-blaze = { version = "0.5.0" }
ip_network_table-deps-treebitmap = { version = "0.5.0" }
rcu = { git = "https://github.com/org-zpr/zpr-utils.git", tag = "zpr-utils-v0.1.0", default-features = false, optional = true }
rand = "0.10.1"

[build-dependencies]
capnpc = "0.25"

[features]
rcu-aarc = ["rcu/rcu-aarc", "rcu"]
rcu-arc-swap = ["rcu/rcu-arc-swap", "rcu"]
rcu-crossbeam-epoch = ["rcu/rcu-crossbeam-epoch", "rcu"]
rcu-mutex-arc = ["rcu/rcu-mutex-arc", "rcu"]
rcu-rwlock = ["rcu/rcu-rwlock", "rcu"]
policy = ["capnp", "bytes", "base64", "colored", "flate2", "serde"]
vsapi = ["capnp"]
all = ["policy", "vsapi"]

[[bench]]
name = "ft_lookup_benchmark"
harness = false
